changed text, updated menus, services, contact

--- a/src/contact.html
+++ b/src/contact.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>TRAVELER - Free Travel Website Template</title>
+    <title>Casa Radu - Contact</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -33,15 +33,17 @@
             <div class="row">
                 <div class="col-lg-6 text-center text-lg-left mb-2 mb-lg-0">
                     <div class="d-inline-flex align-items-center">
-                        <p><i class="fa fa-phone-alt mr-2"></i>+4 0744 638 738</p>
+                        <!-- <p><i class="fa fa-envelope mr-2"></i>info@example.com</p>
+                        <p class="text-body px-3">|</p> -->
+                        <p><i class="fa fa-phone-alt mr-2"></i><a href="tel:0040744638738">+4 0744 638 738</a></p>
                     </div>
                 </div>
                 <div class="col-lg-6 text-center text-lg-right">
                     <div class="d-inline-flex align-items-center">
-                        <a class="text-primary px-3" href="">
+                        <a class="text-primary px-3" target="_blank" href="https://www.facebook.com/casaraducarlibaba/">
                             <i class="fab fa-facebook-f"></i>
                         </a>
-                        <a class="text-primary px-3" href="">
+                        <!--<a class="text-primary px-3" href="">
                             <i class="fab fa-twitter"></i>
                         </a>
                         <a class="text-primary px-3" href="">
@@ -52,14 +54,13 @@
                         </a>
                         <a class="text-primary pl-3" href="">
                             <i class="fab fa-youtube"></i>
-                        </a>
+                        </a>-->
                     </div>
                 </div>
             </div>
         </div>
     </div>
     <!-- Topbar End -->
-
     <!-- Navbar Start -->
     <div class="container-fluid position-relative nav-bar p-0">
         <div class="container-lg position-relative p-0 px-lg-3" style="z-index: 9;">
@@ -72,28 +73,30 @@
                 </button>
                 <div class="collapse navbar-collapse justify-content-between px-3" id="navbarCollapse">
                     <div class="navbar-nav ml-auto py-0">
-                        <a href="index.html" class="nav-item nav-link">Home</a>
-                        <a href="about.html" class="nav-item nav-link">Imagini</a>
-                        <a href="service.html" class="nav-item nav-link">Servicii & Preturi</a>
+                        <a href="index.html" class="nav-item nav-link ">Acasă</a>
+                        <a href="images.html" class="nav-item nav-link">Imagini</a>
+                        <a href="service.html" class="nav-item nav-link">Servicii & Prețuri</a>
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Sporturi de IARNA</a>
                             <div class="dropdown-menu border-0 rounded-0 m-0">
-                                <a href="blog.html" class="dropdown-item">Partia Carlibaba</a>
-                                <a href="single.html" class="dropdown-item">Partia Prislop</a>
-                                <a href="destination.html" class="dropdown-item">Partiile Vatra Dornei</a>
-                                <a href="guide.html" class="dropdown-item">Partia Borsa</a>
+                                <a target="_blank" href="https://www.facebook.com/PartiaCarlibaba/" class="dropdown-item">Pârtia Carlibaba</a>
+                                <a target="_blank" href="https://www.facebook.com/PartiaPrislop" class="dropdown-item">Pârtia Prislop</a>
+                                <a target="_blank" href="https://www.facebook.com/TelegondolaBorsa/" class="dropdown-item">Pârtia Borsa</a>
+                                <a target="_blank" href="https://www.vatra-dornei.info/informatii-utile/partii-de-ski.html" class="dropdown-item">Pârtiile Vatra Dornei</a>
                             </div>
                         </div>
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">De vizitat</a>
                             <div class="dropdown-menu border-0 rounded-0 m-0">
-                                <a href="blog.html" class="dropdown-item">Trasee in Muntii ... </a>
-                                <a href="single.html" class="dropdown-item">Manastirea Prislop</a>
-                                <a href="destination.html" class="dropdown-item">Festivalul Pastravului</a>
-                                <a href="destination.html" class="dropdown-item">Hora de la Prislop</a>
+                                <a target="_blank" href="https://www.parcrodna.ro/pagina/trasee-turistice" class="dropdown-item">Trasee montane Munții Rodnei </a>
+                                <a target="_blank" href="https://www.vatra-dornei.info/trasee-montane.html" class="dropdown-item">Trasee montane Vatra Dornei </a>
+                                <a target="_blank" href="https://www.primariaborsamm.ro/ro/pagina?slug=manastirea-prislop" class="dropdown-item">Manastirea Prislop</a>
+                                <a target="_blank" href="https://www.vatra-dornei.info/poze-statiune/poze-festivalul-pastravului.html" class="dropdown-item">Festivalul Pastravului</a>
+                                <a target="_blank" href="https://www.facebook.com/events/pasul-borsa-prislop/festivalul-interjude%C8%9Bean-de-folclor-hora-la-prislop-edi%C8%9Bia-a-xlix-a/1019184175288080/" class="dropdown-item">Hora la Prislop</a>
+                                <a target="_blank" href="https://www.vatra-dornei.info/obiective-turistice/obiective-turistice.htmll" class="dropdown-item">Obiective turistice în Vatra Dornei</a>
                             </div>
                         </div>
-                        <a href="contact.html" class="nav-item nav-link active">Contacts</a>
+                        <a href="contact.html" class="nav-item nav-link active">Contact</a>
                     </div>
                 </div>
             </nav>
@@ -107,7 +110,7 @@
             <div class="d-flex flex-column align-items-center justify-content-center" style="min-height: 400px">
                 <h3 class="display-4 text-white text-uppercase">Contact</h3>
                 <div class="d-inline-flex text-white">
-                    <p class="m-0 text-uppercase"><a class="text-white" href="">Home</a></p>
+                    <p class="m-0 text-uppercase"><a class="text-white" href="index.html">Acasă</a></p>
                     <i class="fa fa-angle-double-right pt-1 px-3"></i>
                     <p class="m-0 text-uppercase">Contact</p>
                 </div>
@@ -125,15 +128,20 @@
                             <p><i class="fa fa-map-marker-alt mr-2"></i>45a str. Principala, sat Carlibaba, Suceava</p>
                         </div>
                         <div class="control-group">
-                            <p><i class="fa fa-phone-alt mr-2"></i>+4 0744 638 738</p>
+                            <p><i class="fa fa-envelope mr-2"></i><a href="mailto: adrian10nagy@gmail.com">adrian10nagy@gmail.com</a></p>
+                        </div>
+                        <br/>
+                        <div class="control-group">
+                            <p><img src="img/flags/romanian.png" width="20" />  <img src="img/flags/ukrainian.png" width="20" />&nbsp &nbsp &nbsp &nbsp<i class="fa fa-phone-alt mr-2"></i><a href="tel:0040744638738">+4 0744 638 738</a> Ștefan (speaking romanian and ukrainian)</p>
                         </div>
                         <div class="control-group">
-                            <p><i class="fa fa-phone-alt mr-2"></i>+4 0752 393 716</p>
+                            <p><img src="img/flags/romanian.png" width="20" />  <img src="img/flags/british.png" width="20" />&nbsp &nbsp &nbsp &nbsp<i class="fa fa-phone-alt mr-2"></i><a href="tel:0040752393716">+4 0752 393 716</a> Adrian (speaking romanian and english)</p>
                         </div>
                         <div class="control-group">
-                            <p><i class="fa fa-envelope mr-2"></i>adrian10nagy@gmail.com</p>
+                            <p><img src="img/flags/romanian.png" width="20" />  <img src="img/flags/french.png" width="20" />  <img src="img/flags/norwegian.png" width="20" />&nbsp<i class="fa fa-phone-alt mr-2"></i><a href="tel:0040743207470">+4 0743 207 470</a> Mihaela (speaking romanian, french and norwegian)</p>
+                        </div>
 
-                        </div>
+
                     </div>
                 </div>
 
@@ -154,72 +162,68 @@
         <div class="row pt-5">
             <div class="col-lg-3 col-md-6 mb-5">
                 <a href="" class="navbar-brand">
-                    <h1 class="text-primary"><span class="text-white">TRAVEL</span>ER</h1>
+                    <h1 class="text-primary"><span class="text-white">CASA</span>RADU</h1>
                 </a>
-                <p>Sed ipsum clita tempor ipsum ipsum amet sit ipsum lorem amet labore rebum lorem ipsum dolor. No sed vero lorem dolor dolor</p>
+                <p>Te așteptăm cu drag în Bucovina! Contactează-ne pentru a discuta detaliile cazării tale.</p>
                 <h6 class="text-white text-uppercase mt-4 mb-3" style="letter-spacing: 5px;">Follow Us</h6>
                 <div class="d-flex justify-content-start">
-                    <a class="btn btn-outline-primary btn-square mr-2" href="#"><i class="fab fa-twitter"></i></a>
-                    <a class="btn btn-outline-primary btn-square mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-outline-primary btn-square mr-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-                    <a class="btn btn-outline-primary btn-square" href="#"><i class="fab fa-instagram"></i></a>
+                    <!--<a class="btn btn-outline-primary btn-square mr-2" href="#"><i class="fab fa-twitter"></i></a>-->
+                    <a class="btn btn-outline-primary btn-square mr-2" target="_blank" href="https://www.facebook.com/casaraducarlibaba/"><i class="fab fa-facebook-f"></i></a>
+                    <!--<a class="btn btn-outline-primary btn-square mr-2" href="#"><i class="fab fa-linkedin-in"></i></a>-->
+                    <!--<a class="btn btn-outline-primary btn-square" href="#"><i class="fab fa-instagram"></i></a>-->
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
-                <h5 class="text-white text-uppercase mb-4" style="letter-spacing: 5px;">Our Services</h5>
+                <h5 class="text-white text-uppercase mb-4" style="letter-spacing: 5px;">Despre noi</h5>
                 <div class="d-flex flex-column justify-content-start">
-                    <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>About</a>
-                    <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Destination</a>
-                    <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Services</a>
-                    <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Packages</a>
-                    <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Guides</a>
-                    <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Testimonial</a>
-                    <a class="text-white-50" href="#"><i class="fa fa-angle-right mr-2"></i>Blog</a>
+                    <a class="text-white-50 mb-2" href="index.html"><i class="fa fa-angle-right mr-2"></i>Acasă</a>
+                    <a class="text-white-50 mb-2" href="imagini.html"><i class="fa fa-angle-right mr-2"></i>Imagini</a>
+                    <a class="text-white-50 mb-2" href="service.html"><i class="fa fa-angle-right mr-2"></i>Servicii & Prețuri</a>
+                    <a class="text-white-50 mb-2" href="contact.html"><i class="fa fa-angle-right mr-2"></i>Contact</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
-                <h5 class="text-white text-uppercase mb-4" style="letter-spacing: 5px;">Usefull Links</h5>
+                <h5 class="text-white text-uppercase mb-4" style="letter-spacing: 5px;">Linkuri utile</h5>
                 <div class="d-flex flex-column justify-content-start">
-                    <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>About</a>
-                    <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Destination</a>
-                    <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Services</a>
-                    <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Packages</a>
-                    <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Guides</a>
-                    <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Testimonial</a>
-                    <a class="text-white-50" href="#"><i class="fa fa-angle-right mr-2"></i>Blog</a>
+                    <a class="text-white-50 mb-2" target="_blank" href="https://www.facebook.com/PartiaCarlibaba/"><i class="fa fa-angle-right mr-2"></i>Pârtia Cârlibaba</a>
+                    <a class="text-white-50 mb-2" target="_blank" href="https://www.facebook.com/PartiaPrislop"><i class="fa fa-angle-right mr-2"></i>Pârtia Prislop</a>
+                    <a class="text-white-50 mb-2" target="_blank" href="https://www.facebook.com/TelegondolaBorsa/"><i class="fa fa-angle-right mr-2"></i>Pârtia Borșa</a>
+                    <a class="text-white-50 mb-2" target="_blank" href="https://www.parcrodna.ro/pagina/trasee-turistice"><i class="fa fa-angle-right mr-2"></i>Trasee montane Munții Rodnei</a>
+                    <a class="text-white-50 mb-2" target="_blank" href="https://www.vatra-dornei.info/informatii-utile/partii-de-ski.html"><i class="fa fa-angle-right mr-2"></i>Pârtiile Vatra Dornei</a>
+                    <a class="text-white-50 mb-2" target="_blank" href="https://www.vatra-dornei.info/trasee-montane.html"><i class="fa fa-angle-right mr-2"></i>Trasee montane Vatra Dornei</a>
+                    <a class="text-white-50 mb-2" target="_blank" href="https://www.vatra-dornei.info/obiective-turistice/obiective-turistice.html"><i class="fa fa-angle-right mr-2"></i>De vizitat</a>
+
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
-                <h5 class="text-white text-uppercase mb-4" style="letter-spacing: 5px;">Contact Us</h5>
-                <p><i class="fa fa-map-marker-alt mr-2"></i>123 Street, New York, USA</p>
-                <p><i class="fa fa-phone-alt mr-2"></i>+012 345 67890</p>
-                <p><i class="fa fa-envelope mr-2"></i>info@example.com</p>
-                <h6 class="text-white text-uppercase mt-4 mb-3" style="letter-spacing: 5px;">Newsletter</h6>
-                <div class="w-100">
-                    <div class="input-group">
-                        <input type="text" class="form-control border-light" style="padding: 25px;" placeholder="Your Email">
-                        <div class="input-group-append">
-                            <button class="btn btn-primary px-3">Sign Up</button>
-                        </div>
-                    </div>
-                </div>
+                <h5 class="text-white text-uppercase mb-4" style="letter-spacing: 5px;">Contactează-ne</h5>
+                <p><i class="fa fa-map-marker-alt mr-2"></i>str. Principală, nr 45A, com. Cârlibaba, jud. Suceava</p>
+                <p> <i class="fa fa-phone-alt mr-2"></i><a href="tel:0040744638738">+4 0744 638 738</a></p>
+                <p><i class="fa fa-envelope mr-2"></i><a href="mailto: adrian10nagy@gmail.com">adrian10nagy@gmail.com</a></p>
+                <!--<h6 class="text-white text-uppercase mt-4 mb-3" style="letter-spacing: 5px;">Newsletter</h6>-->
+                <!--<div class="w-100">
+        <div class="input-group">
+            <input type="text" class="form-control border-light" style="padding: 25px;" placeholder="Your Email">
+            <div class="input-group-append">
+                <button class="btn btn-primary px-3">Sign Up</button>
+            </div>
+        </div>
+    </div>-->
             </div>
         </div>
     </div>
-    <div class="container-fluid bg-dark text-white border-top py-4 px-sm-3 px-md-5" style="border-color: rgba(256, 256, 256, .1) !important;">
-        <div class="row">
+    <!--<div class="container-fluid bg-dark text-white border-top py-4 px-sm-3 px-md-5" style="border-color: rgba(256, 256, 256, .1) !important;">-->
+    <!--<div class="row">
             <div class="col-lg-6 text-center text-md-left mb-3 mb-md-0">
-                <p class="m-0 text-white-50">
-                    Copyright &copy; <a href="#">Domain</a>. All Rights Reserved.</a>
+                <p class="m-0 text-white-50">Copyright &copy; <a href="#">CasaRadu</a>. All Rights Reserved.</a>
                 </p>
             </div>
             <div class="col-lg-6 text-center text-md-right">
-                <p class="m-0 text-white-50">
-                    Designed by <a href="https://htmlcodex.com">HTML Codex</a>
+                <p class="m-0 text-white-50">Designed by <a href="https://htmlcodex.com">HTML Codex</a>
                 </p>
             </div>
         </div>
-    </div>
+    </div>-->
     <!-- Footer End -->
     <!-- Back to Top -->
     <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="fa fa-angle-double-up"></i></a>
