--- a/src/guide.html
+++ b/src/guide.html
@@ -33,17 +33,17 @@
             <div class="row">
                 <div class="col-lg-6 text-center text-lg-left mb-2 mb-lg-0">
                     <div class="d-inline-flex align-items-center">
-                        <p><i class="fa fa-envelope mr-2"></i>info@example.com</p>
-                        <p class="text-body px-3">|</p>
+                        <!-- <p><i class="fa fa-envelope mr-2"></i>info@example.com</p>
+                        <p class="text-body px-3">|</p> -->
                         <p><i class="fa fa-phone-alt mr-2"></i>+4 0744 638 738</p>
                     </div>
                 </div>
                 <div class="col-lg-6 text-center text-lg-right">
                     <div class="d-inline-flex align-items-center">
-                        <a class="text-primary px-3" href="">
+                        <a class="text-primary px-3" target="_blank" href="https://www.facebook.com/casaraducarlibaba/">
                             <i class="fab fa-facebook-f"></i>
                         </a>
-                        <a class="text-primary px-3" href="">
+                        <!--<a class="text-primary px-3" href="">
                             <i class="fab fa-twitter"></i>
                         </a>
                         <a class="text-primary px-3" href="">
@@ -54,39 +54,46 @@
                         </a>
                         <a class="text-primary pl-3" href="">
                             <i class="fab fa-youtube"></i>
-                        </a>
+                        </a>-->
                     </div>
                 </div>
             </div>
         </div>
     </div>
     <!-- Topbar End -->
-
-
     <!-- Navbar Start -->
     <div class="container-fluid position-relative nav-bar p-0">
         <div class="container-lg position-relative p-0 px-lg-3" style="z-index: 9;">
             <nav class="navbar navbar-expand-lg bg-light navbar-light shadow-lg py-3 py-lg-0 pl-3 pl-lg-5">
                 <a href="" class="navbar-brand">
-                    <h1 class="m-0 text-primary"><span class="text-dark">TRAVEL</span>ER</h1>
+                    <h1 class="m-0 text-primary"><span class="text-dark">Casa </span>Radu</h1>
                 </a>
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-between px-3" id="navbarCollapse">
                     <div class="navbar-nav ml-auto py-0">
-                        <a href="index.html" class="nav-item nav-link">Home</a>
-                        <a href="about.html" class="nav-item nav-link">About</a>
-                        <a href="service.html" class="nav-item nav-link">Services</a>
-                        <a href="package.html" class="nav-item nav-link">Tour Packages</a>
+                        <a href="index.html" class="nav-item nav-link active">Acasă</a>
+                        <a href="images.html" class="nav-item nav-link">Imagini</a>
+                        <a href="service.html" class="nav-item nav-link">Servicii & Prețuri</a>
                         <div class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle active" data-toggle="dropdown">Pages</a>
+                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Sporturi de IARNA</a>
                             <div class="dropdown-menu border-0 rounded-0 m-0">
-                                <a href="blog.html" class="dropdown-item">Blog Grid</a>
-                                <a href="single.html" class="dropdown-item">Blog Detail</a>
-                                <a href="destination.html" class="dropdown-item">Destination</a>
-                                <a href="guide.html" class="dropdown-item active">Travel Guides</a>
-                                <a href="testimonial.html" class="dropdown-item">Testimonial</a>
+                                <a target="_blank" href="https://www.facebook.com/PartiaCarlibaba/" class="dropdown-item">Pârtia Carlibaba</a>
+                                <a target="_blank" href="https://www.facebook.com/PartiaPrislop" class="dropdown-item">Pârtia Prislop</a>
+                                <a target="_blank" href="https://www.facebook.com/TelegondolaBorsa/" class="dropdown-item">Pârtia Borsa</a>
+                                <a target="_blank" href="https://www.vatra-dornei.info/informatii-utile/partii-de-ski.html" class="dropdown-item">Pârtiile Vatra Dornei</a>
+                            </div>
+                        </div>
+                        <div class="nav-item dropdown">
+                            <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">De vizitat</a>
+                            <div class="dropdown-menu border-0 rounded-0 m-0">
+                                <a target="_blank" href="https://www.parcrodna.ro/pagina/trasee-turistice" class="dropdown-item">Trasee montane Munții Rodnei </a>
+                                <a target="_blank" href="https://www.vatra-dornei.info/trasee-montane.html" class="dropdown-item">Trasee montane Vatra Dornei </a>
+                                <a target="_blank" href="https://www.primariaborsamm.ro/ro/pagina?slug=manastirea-prislop" class="dropdown-item">Manastirea Prislop</a>
+                                <a target="_blank" href="https://www.vatra-dornei.info/poze-statiune/poze-festivalul-pastravului.html" class="dropdown-item">Festivalul Pastravului</a>
+                                <a target="_blank" href="https://www.facebook.com/events/pasul-borsa-prislop/festivalul-interjude%C8%9Bean-de-folclor-hora-la-prislop-edi%C8%9Bia-a-xlix-a/1019184175288080/" class="dropdown-item">Hora la Prislop</a>
+                                <a target="_blank" href="https://www.vatra-dornei.info/obiective-turistice/obiective-turistice.htmll" class="dropdown-item">Obiective turistice în Vatra Dornei</a>
                             </div>
                         </div>
                         <a href="contact.html" class="nav-item nav-link">Contact</a>
@@ -96,7 +103,6 @@
         </div>
     </div>
     <!-- Navbar End -->
-
 
     <!-- Header Start -->
     <div class="container-fluid page-header">
@@ -112,8 +118,6 @@
         </div>
     </div>
     <!-- Header End -->
-
-
     <!-- Booking Start -->
     <div class="container-fluid booking mt-5 pb-5">
         <div class="container pb-5">
@@ -134,14 +138,14 @@
                             <div class="col-md-3">
                                 <div class="mb-3 mb-md-0">
                                     <div class="date" id="date1" data-target-input="nearest">
-                                        <input type="text" class="form-control p-4 datetimepicker-input" placeholder="Depart Date" data-target="#date1" data-toggle="datetimepicker"/>
+                                        <input type="text" class="form-control p-4 datetimepicker-input" placeholder="Depart Date" data-target="#date1" data-toggle="datetimepicker" />
                                     </div>
                                 </div>
                             </div>
                             <div class="col-md-3">
                                 <div class="mb-3 mb-md-0">
                                     <div class="date" id="date2" data-target-input="nearest">
-                                        <input type="text" class="form-control p-4 datetimepicker-input" placeholder="Return Date" data-target="#date2" data-toggle="datetimepicker"/>
+                                        <input type="text" class="form-control p-4 datetimepicker-input" placeholder="Return Date" data-target="#date2" data-toggle="datetimepicker" />
                                     </div>
                                 </div>
                             </div>
@@ -165,8 +169,6 @@
         </div>
     </div>
     <!-- Booking End -->
-
-
     <!-- Team Start -->
     <div class="container-fluid py-5">
         <div class="container pt-5 pb-3">
@@ -315,69 +317,65 @@
         </div>
     </div>
     <!-- Team End -->
-
-
     <!-- Footer Start -->
     <div class="container-fluid bg-dark text-white-50 py-5 px-sm-3 px-lg-5" style="margin-top: 90px;">
         <div class="row pt-5">
             <div class="col-lg-3 col-md-6 mb-5">
                 <a href="" class="navbar-brand">
-                    <h1 class="text-primary"><span class="text-white">TRAVEL</span>ER</h1>
+                    <h1 class="text-primary"><span class="text-white">CASA</span>RADU</h1>
                 </a>
-                <p>Sed ipsum clita tempor ipsum ipsum amet sit ipsum lorem amet labore rebum lorem ipsum dolor. No sed vero lorem dolor dolor</p>
+                <p>Te așteptăm cu drag în Bucovina! Contactează-ne pentru a discuta detaliile cazării tale.</p>
                 <h6 class="text-white text-uppercase mt-4 mb-3" style="letter-spacing: 5px;">Follow Us</h6>
                 <div class="d-flex justify-content-start">
-                    <a class="btn btn-outline-primary btn-square mr-2" href="#"><i class="fab fa-twitter"></i></a>
-                    <a class="btn btn-outline-primary btn-square mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-outline-primary btn-square mr-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-                    <a class="btn btn-outline-primary btn-square" href="#"><i class="fab fa-instagram"></i></a>
+                    <!--<a class="btn btn-outline-primary btn-square mr-2" href="#"><i class="fab fa-twitter"></i></a>-->
+                    <a class="btn btn-outline-primary btn-square mr-2" target="_blank" href="https://www.facebook.com/casaraducarlibaba/"><i class="fab fa-facebook-f"></i></a>
+                    <!--<a class="btn btn-outline-primary btn-square mr-2" href="#"><i class="fab fa-linkedin-in"></i></a>-->
+                    <!--<a class="btn btn-outline-primary btn-square" href="#"><i class="fab fa-instagram"></i></a>-->
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
-                <h5 class="text-white text-uppercase mb-4" style="letter-spacing: 5px;">Our Services</h5>
+                <h5 class="text-white text-uppercase mb-4" style="letter-spacing: 5px;">Despre noi</h5>
                 <div class="d-flex flex-column justify-content-start">
-                    <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>About</a>
-                    <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Destination</a>
-                    <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Services</a>
-                    <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Packages</a>
-                    <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Guides</a>
-                    <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Testimonial</a>
-                    <a class="text-white-50" href="#"><i class="fa fa-angle-right mr-2"></i>Blog</a>
+                    <a class="text-white-50 mb-2" href="index.html"><i class="fa fa-angle-right mr-2"></i>Home</a>
+                    <a class="text-white-50 mb-2" href="imagini.html"><i class="fa fa-angle-right mr-2"></i>Imagini</a>
+                    <a class="text-white-50 mb-2" href="service.html"><i class="fa fa-angle-right mr-2"></i>Servicii & Prețuri</a>
+                    <a class="text-white-50 mb-2" href="contact.html"><i class="fa fa-angle-right mr-2"></i>Contact</a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
-                <h5 class="text-white text-uppercase mb-4" style="letter-spacing: 5px;">Usefull Links</h5>
+                <h5 class="text-white text-uppercase mb-4" style="letter-spacing: 5px;">Linkuri utile</h5>
                 <div class="d-flex flex-column justify-content-start">
-                    <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>About</a>
-                    <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Destination</a>
-                    <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Services</a>
-                    <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Packages</a>
-                    <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Guides</a>
-                    <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Testimonial</a>
-                    <a class="text-white-50" href="#"><i class="fa fa-angle-right mr-2"></i>Blog</a>
+                    <a class="text-white-50 mb-2" target="_blank" href="https://www.facebook.com/PartiaCarlibaba/"><i class="fa fa-angle-right mr-2"></i>Pârtia Cârlibaba</a>
+                    <a class="text-white-50 mb-2" target="_blank" href="https://www.facebook.com/PartiaPrislop"><i class="fa fa-angle-right mr-2"></i>Pârtia Prislop</a>
+                    <a class="text-white-50 mb-2" target="_blank" href="https://www.facebook.com/TelegondolaBorsa/"><i class="fa fa-angle-right mr-2"></i>Pârtia Borșa</a>
+                    <a class="text-white-50 mb-2" target="_blank" href="https://www.parcrodna.ro/pagina/trasee-turistice"><i class="fa fa-angle-right mr-2"></i>Trasee montane Munții Rodnei</a>
+                    <a class="text-white-50 mb-2" target="_blank" href="https://www.vatra-dornei.info/informatii-utile/partii-de-ski.html"><i class="fa fa-angle-right mr-2"></i>Pârtiile Vatra Dornei</a>
+                    <a class="text-white-50 mb-2" target="_blank" href="https://www.vatra-dornei.info/trasee-montane.html"><i class="fa fa-angle-right mr-2"></i>Trasee montane Vatra Dornei</a>
+                    <a class="text-white-50 mb-2" target="_blank" href="https://www.vatra-dornei.info/obiective-turistice/obiective-turistice.html"><i class="fa fa-angle-right mr-2"></i>De vizitat</a>
+
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
-                <h5 class="text-white text-uppercase mb-4" style="letter-spacing: 5px;">Contact Us</h5>
-                <p><i class="fa fa-map-marker-alt mr-2"></i>123 Street, New York, USA</p>
-                <p><i class="fa fa-phone-alt mr-2"></i>+012 345 67890</p>
-                <p><i class="fa fa-envelope mr-2"></i>info@example.com</p>
-                <h6 class="text-white text-uppercase mt-4 mb-3" style="letter-spacing: 5px;">Newsletter</h6>
-                <div class="w-100">
+                <h5 class="text-white text-uppercase mb-4" style="letter-spacing: 5px;">Contactează-ne</h5>
+                <p><i class="fa fa-map-marker-alt mr-2"></i>str. Principală, nr 45A, com. Cârlibaba, jud. Suceava</p>
+                <p><i class="fa fa-phone-alt mr-2"></i>+4 0744 638 738</p>
+                <p><i class="fa fa-envelope mr-2"></i>adrian10nagy@gmail.com</p>
+                <!--<h6 class="text-white text-uppercase mt-4 mb-3" style="letter-spacing: 5px;">Newsletter</h6>-->
+                <!--<div class="w-100">
                     <div class="input-group">
                         <input type="text" class="form-control border-light" style="padding: 25px;" placeholder="Your Email">
                         <div class="input-group-append">
                             <button class="btn btn-primary px-3">Sign Up</button>
                         </div>
                     </div>
-                </div>
+                </div>-->
             </div>
         </div>
     </div>
-    <div class="container-fluid bg-dark text-white border-top py-4 px-sm-3 px-md-5" style="border-color: rgba(256, 256, 256, .1) !important;">
-        <div class="row">
+    <!--<div class="container-fluid bg-dark text-white border-top py-4 px-sm-3 px-md-5" style="border-color: rgba(256, 256, 256, .1) !important;">-->
+    <!--<div class="row">
             <div class="col-lg-6 text-center text-md-left mb-3 mb-md-0">
-                <p class="m-0 text-white-50">Copyright &copy; <a href="#">Domain</a>. All Rights Reserved.</a>
+                <p class="m-0 text-white-50">Copyright &copy; <a href="#">CasaRadu</a>. All Rights Reserved.</a>
                 </p>
             </div>
             <div class="col-lg-6 text-center text-md-right">
@@ -385,10 +383,8 @@
                 </p>
             </div>
         </div>
-    </div>
+    </div>-->
     <!-- Footer End -->
-
-
     <!-- Back to Top -->
     <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="fa fa-angle-double-up"></i></a>
 
